input buscar producto y modificacion del modal producto

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,7 +18,7 @@
     <div class="text-center mt-5">
     <a href="/sales" class="btn btn-warning">Ventas</a>
     <a href="/createCombo" class="btn btn-primary">Crear Combo</a>
-    <a href="/viewCombo" class="btn btn-danger">Editar Combos</a>
+    <a href="/viewCombo" class="btn btn-danger">Ver y Editar Combos</a>
     </div>
     
 </div>
