--- a/views/caja.hbs
+++ b/views/caja.hbs
@@ -36,10 +36,10 @@
         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
-                <div class="modal-header">
+                {{!-- <div class="modal-header">
                     <h5 class="modal-title" id="cierreParcialModalLabel">Cierre Parcial</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
+                </div> --}}
                 <div class="modal-body">
                     <form id="cierreParcialForm">
                         <div class="mb-3">
@@ -55,7 +55,7 @@
         </div>
     </div>
 </div>
-<button type="button" class="btn btn-danger" id="cancel-btn">Ir a ventas</button>
+<button type="button" class="btn btn-danger" id="cancel-btn">Ir a Inicio</button>
 
 {{!------------------------------------------------ BOTON DE CANCELAR ---------------------}}
 <script>
