--- a/views/newProduct.hbs
+++ b/views/newProduct.hbs
@@ -22,8 +22,10 @@
             <label for="precio_venta">Precio de Venta:</label>
             <input type="number" class="form-control" id="precio_venta" name="precio_venta" required>
         </div>
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <button type="button" class="btn btn-danger" id="cancel-btn">Cancelar</button>
+        <div class="mt-3 text-center">
+            <button type="submit" class="btn btn-primary">Guardar</button>
+            <button type="button" class="btn btn-danger" id="cancel-btn">Cancelar</button>
+        </div>
     </form>
 </div>
 
