ajustes y has en los usuarios y administracion de roles

--- a/views/createCombo.hbs
+++ b/views/createCombo.hbs
@@ -80,7 +80,7 @@
 
         // Funcionalidad del botón "Cancelar"
         $('#cancelar-btn').click(function () {
-            window.location.href = '/home';
+            window.location.href = '/admin/home';
         });
 
         // Añadir nuevo campo de producto
