--- a/views/sales.hbs
+++ b/views/sales.hbs
@@ -74,7 +74,7 @@
     </form>
 
     <div class="mt-5">
-        <a href="/admin" class="btn btn-success">Ir a Pagina Pricipal</a>
+        <a href="/admin/home" class="btn btn-success">Ir a Pagina Pricipal</a>
     </div>
 </div>
 
