--- a/views/viewSales.hbs
+++ b/views/viewSales.hbs
@@ -30,7 +30,7 @@
     </table>
     <div class="volver">
     <a href="/sales" class="btn btn-primary">Ir a Ventas</a>
-    <a href="/home" class="btn btn-warning">Ir a Inicio</a>
+    <a href="/admin/home" class="btn btn-warning">Ir a Inicio</a>
     </div>
 </div>
 
