--- a/views/editUser.hbs
+++ b/views/editUser.hbs
@@ -2,25 +2,29 @@
 
 <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
     <div class="col-md-6">
-        <h1 class="text-center">Registro de Usuario</h1>
-        <form id="registerForm" action="/register" method="POST">
+        <h1 class="text-center">Editar Usuario</h1>
+        <form id="editUserForm" action="/users/edit/{{user._id}}" method="POST">
             <div class="form-group mb-3">
                 <label for="username">Nombre de Usuario:</label>
-                <input type="text" class="form-control" id="username" name="username" required>
+                <input type="text" class="form-control" id="username" name="username" value="{{user.username}}"
+                    required>
             </div>
             <div class="form-group mb-3">
                 <label for="password">Contraseña:</label>
-                <input type="password" class="form-control" id="password" name="password" required>
+                <input type="password" class="form-control" id="password" name="password" value="{{user.password}}"
+                    required>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="empleado" name="role" value="empleado">
+                <input class="form-check-input" type="checkbox" id="empleado" name="role" value="empleado" {{#if (eq
+                    user.role 'empleado' )}}checked{{/if}}>
                 <label class="form-check-label" for="empleado">Es Empleado</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" id="admin" name="role" value="admin">
+                <input class="form-check-input" type="checkbox" id="admin" name="role" value="admin" {{#if (eq
+                    user.role 'admin' )}}checked{{/if}}>
                 <label class="form-check-label" for="admin">Es Administrador</label>
             </div>
-            <button type="submit" class="btn btn-primary mt-3">Registrar Usuario</button>
+            <button type="submit" class="btn btn-primary mt-3">Actualizar Usuario</button>
         </form>
         <button type="button" class="btn btn-danger mt-3" id="cancel-btn">Cancelar</button>
     </div>
@@ -40,4 +44,5 @@
         });
     });
 </script>
+
 {{> footer}}
