--- a/views/viewCombo.hbs
+++ b/views/viewCombo.hbs
@@ -19,7 +19,7 @@
     </table>
 
     <div class="mt-4 mb-3 text-center">
-        <a href="/home" class="btn btn-danger">Cancelar</a>
+        <a href="/admin/home" class="btn btn-danger">Cancelar</a>
         <!-- Botón para guardar todos los cambios realizados en todos los combos -->
         <button type="button" class="btn btn-primary" id="saveAllCombosBtn">Guardar</button>
     </div>
